[레거시 코드 리팩터링 - 1단계] 오찌(오지훈) 미션 제출합니다. (#204)
* docs: 요구 사항 정리

* test: 상품에 대한 서비스 테스트 코드 작성

* test: 테스트 환경에서 flyway disable

* test: 상품에 대한 Dao 테스트 코드 작성

* test: 서비스와 Dao에 대한 테스트 설정을 어노테이션으로 분리

* test: ProductDao의 누락 테스트 추가

* test: 메뉴 그룹에 대한 Dao 테스트 코드 작성

* test: 메뉴 그룹에 대한 서비스 테스트 코드 작성

* test: 메뉴에 대한 Dao 테스트 코드 작성

* test: 메뉴에 대한 서비스 테스트 코드 작성

* chore: 자바 11로 마이그레이션

* test: 메뉴 상품에 대한 Dao 테스트 코드 작성

* test: 단체 지정에 대한 Dao 테스트 코드 작성

* test: 주문 테이블에 대한 Dao 테스트 코드 작성

* test: 단체 지정 픽스처 생성 구조 변경

* test: 외래키 null 가능 테스트 추가

* test: 주문에 대한 Dao 테스트 코드 작성

* test: 주문 항목에 대한 Dao 테스트 코드 작성

* test: 주문 테이블에 대한 서비스 테스트 코드 작성

* test: 단체 지정에 대한 서비스 테스트 코드 작성

* test: 주문에 대한 서비스 테스트 코드 작성

* test: 서비스 테스트가 테스트 대상 서비스만 의존하고 나머지는 DAO를 의존하도록 수정